--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <div class="container">
 
       <div class="des-img">
-        <img class="illustration" src="images/illustration-woman-online-desktop.svg" alt="" srcset="">
-        <img class="illustration-mob" src="images/illustration-woman-online-mobile.svg" alt="" srcset="">
+        <img class="illustration" src="images/illustration-woman-online-desktop.svg" alt="" >
+        <img class="illustration-mob" src="images/illustration-woman-online-mobile.svg" alt="" >
         <img class="box" src="images/illustration-box-desktop.svg" alt="" srcset="">
       </div>
 
@@ -48,7 +48,7 @@
           <div class="content">
             <div class="question">
               How many team members can I invite?
-              <img class="arrow" src="images/icon-arrow-down.svg" alt="" srcset="">
+              <img class="arrow" src="images/icon-arrow-down.svg" alt="" >
             </div>
             <div class="answer ">
               You can invite up to 2 additional users on the Free plan. There is no limit on
@@ -60,7 +60,7 @@
           <div class="content">
             <div class="question">
               What is the maximum file upload size?
-              <img class="arrow" src="images/icon-arrow-down.svg" alt="" srcset="">
+              <img class="arrow" src="images/icon-arrow-down.svg" alt="" >
 
             </div>
             <div class="answer">
@@ -72,7 +72,7 @@
           <div class="content">
             <div class="question ">
               How do I reset my password?
-              <img class="arrow" src="images/icon-arrow-down.svg" alt="" srcset="">
+              <img class="arrow" src="images/icon-arrow-down.svg" alt="" >
 
             </div>
             <div class="answer">
@@ -85,7 +85,7 @@
           <div class="content">
             <div class="question ">
               Can I cancel my subscription?
-              <img class="arrow" src="images/icon-arrow-down.svg" alt="" srcset="">
+              <img class="arrow" src="images/icon-arrow-down.svg" alt="" >
             </div>
             <div class="answer">
               Yes! Send us a message and we’ll process your request no questions asked.
@@ -96,7 +96,7 @@
           <div class="content">
             <div class="question">
               Do you provide additional support?
-              <img class="arrow" src="images/icon-arrow-down.svg" alt="" srcset="">
+              <img class="arrow" src="images/icon-arrow-down.svg" alt="" >
 
             </div>
             <div class="answer">
