--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="des-img">
         <img class="illustration" src="images/illustration-woman-online-desktop.svg" alt="" >
         <img class="illustration-mob" src="images/illustration-woman-online-mobile.svg" alt="" >
-        <img class="box" src="images/illustration-box-desktop.svg" alt="" srcset="">
+        <img class="box" src="images/illustration-box-desktop.svg" alt="" >
       </div>
 
       <div class="faq">
